<resources>
    <string name="app_name">ระบบวิเคราะห์สภาพพื้นที่สำหรับปลูกข้าว</string>

    <!--set string login form-->
    <string name="hint_email">อีเมล์(example@gmail.com)</string>
    <string name="hint_password">รหัสผ่าน(Tt1234#)</string>
    <string name="button_login">เข้าสู่ระบบ</string>
    <string name="button_register">ลงทะเบียน</string>
    <string name="button_exit">ย้อนกลับ</string>
    <string name="toolbar"></string>
    <string name="text1">เกรุณาระบุพันธุ์ข้าว</string>
    <string name="text2">กรุณาระบุอำเภอ</string>
    <string name="text3">กรถณาระบุตำบล</string>
    <string name="text4">พื้นที่ที่ท่านอยู่ได้รับน้ำจากกรมชลประทานหหรือไม่</string>



    <string-array name="sex_edit_text">
        <item>กรุณาเลือก</item>
        <item>ชาย</item>
        <item>หญิง</item>
    </string-array>

    <string-array name="spinnerrice">
        <item>กรุณาเลือกพันธุ์ข้าว</item>
        <item>กข11</item>
        <item>กข29</item>
        <item>กข31</item>
        <item>กข39</item>
        <item>กข41</item>
        <item>กข43</item>
        <item>สุพรรณบุรี1</item>
        <item>สุพรรณบุรี60</item>
        <item>ชัยนาท1</item>
        <item>ปทุมธานี1</item>
        <item>พิษณุโลก2</item>
    </string-array>

    <string-array name="spinnearea">
        <item>กรุณาเลือกอำเถอ</item>
        <item>อำเภอคลองหลวง</item>
        <item>อำเภอเมืองปทุมธานี</item>
        <item>อำเภอสามโคก</item>
        <item>อำเภอธัญบุรี</item>
        <item>อำเภอลาดหลุมแก้ว</item>
        <item>อำเภอลำลูกกา</item>
        <item>อำเภอหนองเสือ</item>
    </string-array>
    <string-array name="spinnetambon">
        <item>กรุณาเลือกตำบล</item>
        <item>บางเดื่อ</item>
        <item>บางกะดี</item>
        <item>บางขะแยง</item>
        <item>บางคูวัด</item>
        <item>บางปรอก</item>
        <item>บางพูด</item>
        <item>บ้านใหม่</item>
        <item>บ้านกระแชง</item>
        <item>บ้านกลาง</item>
        <item>บ้านฉาง</item>
        <item>สวนพริกไทย</item>
        <item>หลักหก</item>
        <item>คลองเจ็ด</item>
        <item>คลองสอง</item>
        <item>คลองสาม</item>
        <item>คลองสี่</item>
        <item>คลองหก</item>
        <item>คลองหนึ่ง</item>
        <item>คลองห้า</item>
        <item>บึงน้ำรักษ์</item>
        <item>บึงยี่โถ</item>
        <item>บึงสนั่น</item>
        <item>ประชาธิปัตย์</item>
        <item>รังสิต</item>
        <item>ลำผักกูด</item>
        <item>คลองพระอุดม</item>
        <item>คูขวาง</item>
        <item>คูบางหลวง</item>
        <item>บ่อเงิน</item>
        <item>ระแหง</item>
        <item>ลาดหลุมแก้ว</item>
        <item>หน้าไม้</item>
        <item>คูคต</item>
        <item>บึงคอไห</item>
        <item>บึงคำพร้อย</item>
        <item>บึงทองหลาง</item>
        <item>พืชอุดม</item>
        <item>ลาดสวาย</item>
        <item>ลำไทร</item>
        <item>ลำลูกกา</item>
        <item>เชียงรากใหญ่</item>
        <item>เชียงรากน้อย</item>
        <item>กระแชง</item>
        <item>คลองควาย</item>
        <item>ท้ายเกาะ</item>
        <item>บางเตย</item>
        <item>บางโพธิ์เหนือ</item>
        <item>บางกระบือ</item>
        <item>บ้านงิ้ว</item>
        <item>บ้านปทุม</item>
        <item>สามโคก</item>
        <item>นพรัตน์</item>
        <item>บึงกาสาม</item>
        <item>บึงชำอ้อ</item>
        <item>บึงบอน</item>
        <item>บึงบา</item>
        <item>ศาลาครุ</item>
        <item>หนองสามวัง</item>
    </string-array>
    <string-array name="spinnerwater_area">
        <item>กรุณาเลือกพื้นที่ได้รับน้ำจากกรมชลประทาน</item>
        <item>ได้รับ</item>
        <item>ไม่ได้รับ</item>

    </string-array>

    <string name="text_username">กรุณากรอกชื่อผู้ใช้ </string>
    <string name="text_fast_name">กรุณากรอกชื่อ(รองรับภาษาไทย)</string>
    <string name="text_last_name">กรุณากรอกนามสกุล(รองรับภาษาไทย)</string>
    <string name="text_password_name">กรุณากรอกรหัสผ่าน(A-Z, a-z, 0-9, !@#$%^* )</string>
    <string name="text_confirm_name">กรุณากรอกยืนยันรหัสผ่าน(A-Z, a-z, 0-9, !@#$%^* )</string>
    <string name="text_career">กรุณากรอกระบุอาชีพ</string>

    <string name="text_sex">กรุณากรอกระบุเพศ</string>
    <string name="text_save">บันทึก</string>
    <string name="text_cal">คำนวณ</string>

    <!--login and register display-->
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>

    <!-- Sign in error message -->
    <string name="rice_error_password_more_length">รหัสผ่านต้องกรอกอย่างน้อย 8 ตัวอักษร</string>
    <string name="rice_error_not_enter_email">กรุณากรอกอีเมล์</string>
    <string name="rice_error_not_match_email">กรุณากรอกอีเมล์ให้ถูกต้องตามตัวอย่าง Exam@exam.com</string>
    <string name="rice_error_not_enter_password">กรุณากรอกรหัสผ่าน</string>
    <string name="rice_error_password_less">กรุณากรอกรหัสอย่างน้อย 8 ตัวอักษร และไม่เกิน 12 อักษร</string>

    <!-- Sign up error message -->
    <string name="rice_error_not_enter_name">กรุณากรอกชื่อผู้ใช้งาน</string>
    <string name="rice_error_not_enter_first">กรุณากรอกชื่อ</string>
    <string name="rice_error_not_enter_last">กรุณากรอกนามสกุล</string>
    <string name="rice_error_not_enter_sex">กรุณากรอกเพศ</string>
    <string name="rice_error_not_enter_pass">กรุณากรอกรหัสผ่าน</string>
    <string name="rice_error_not_enter_re_pass">กรุณากรอกรหัสยืนยัน</string>
    <string name="rice_error_not_enter_re_pass_notmatch">รหัสการยืนยันไม่ตรงกันโปรดตรวจสอบอีกครั้ง</string>
    <string name="rice_error_not_enter_work">กรุณากรอกอาชีพ</string>


    <!--string for weather-->
    <string name="app_name_weather">ตรวจสอบสภาพอากาศ</string>
    <string name="temperature">อุณหภูมิ</string>
    <string name="condition">เงื่อนไข</string>
    <string name="location">ที่ตั้ง</string>
    <string name="powered_by_yahoo">powered by Yahoo!</string>
    <string name="condition_icon">Condition Icon</string>
    <string name="loading">กำลังดาวน์โหลด&#8230;</string>
    <string name="temperature_output">%1$d&#176;%2$s</string>
    <string name="update_location">อัปเดตสถานที่</string>
    <string name="settings">ตั้งค่าสภาพอากาศ</string>
    <string name="cache_exception">ไม่มีข้อมูลสภาพอากาศที่แคช</string>
    <string name="location_permission_needed">จำเป็นต้องใช้ตำแหน่งอุปกรณ์สำหรับ Weather GeoLocation</string>
    <string name="disable_geolocation">ปรับปรุงการตั้งค่าสภาพอากาศ</string>
    <string name="day">วัน</string>
    <string name="high">สูง</string>
    <string name="low">ต่ำ</string>
    <string name="title_activity_analysis">analysis</string>

</resources>
