<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="24dp"
        android:paddingTop="16dp">

        <!-- Snippet from "Add text fields" section goes here. -->
        <!--ปุ่มรับค่า username -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/user_text_input"
            style="@style/Widget.demorice.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_username">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/user_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>


        <!-- Snippet from "Add text fields" section goes here. -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/fast_text_input"
            style="@style/Widget.demorice.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_fast_name">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/fast_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <!-- Snippet from "Add text fields" section goes here. -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/last_text_input"
            style="@style/Widget.demorice.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_last_name">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/last_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <!-- Snippet from "Add text fields" section goes here. -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/email_text_input"
            style="@style/Widget.demorice.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>


        <!-- Snippet from "Add text fields" section goes here. -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/password_text_input"
            style="@style/Widget.demorice.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_password_name">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <!-- Snippet from "Add text fields" section goes here. -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/confirm_password_text_input"
            style="@style/Widget.demorice.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_confirm_name">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/confirm_password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/career_text_input"
            style="@style/Widget.demorice.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_career">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/career_password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>


        <Spinner android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_sex">
        </Spinner>

        
    </LinearLayout>










</android.support.constraint.ConstraintLayout>

