<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".WeatherActivity">

    <ImageView
        android:id="@+id/weatherIconImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/condition_icon"
        android:src="@drawable/icon_na" />

    <TextView
        android:id="@+id/temperatureTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/weatherIconImageView"
        android:layout_centerHorizontal="true"
        android:text="@string/temperature"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:typeface="serif" />

    <TextView
        android:id="@+id/conditionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/temperatureTextView"
        android:layout_centerHorizontal="true"
        android:text="@string/condition"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/locationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/conditionTextView"
        android:layout_centerHorizontal="true"
        android:text="@string/location"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/powered_by_yahoo"
        android:src="@drawable/yahoo_logo" />

    <LinearLayout
        android:id="@+id/forecastContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/imageView"
        android:layout_below="@+id/locationTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <fragment
            android:id="@+id/forecast_0"
            android:name="com.crud.jo.demorice.fragments.WeatherConditionFragment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:layout="@layout/fragment_weather_condition" />

        <fragment
            android:id="@+id/forecast_1"
            android:name="com.crud.jo.demorice.fragments.WeatherConditionFragment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:layout="@layout/fragment_weather_condition" />

        <fragment
            android:id="@+id/forecast_2"
            android:name="com.crud.jo.demorice.fragments.WeatherConditionFragment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:layout="@layout/fragment_weather_condition" />

        <fragment
            android:id="@+id/forecast_3"
            android:name="com.crud.jo.demorice.fragments.WeatherConditionFragment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:layout="@layout/fragment_weather_condition" />

        <fragment
            android:id="@+id/forecast_4"
            android:name="com.crud.jo.demorice.fragments.WeatherConditionFragment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:layout="@layout/fragment_weather_condition" />
    </LinearLayout>

</RelativeLayout>
